[gd_scene load_steps=4 format=3 uid="uid://byiq6ibhxpgv6"]

[ext_resource type="Script" path="res://Scripts/Dialogue/temp_dialogue_player.gd" id="1_j41bn"]
[ext_resource type="FontFile" uid="uid://dc7qewa1ln0ax" path="res://Dialogue/Fonts/PixelOperator8-Bold.ttf" id="3_ljukb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j2se6"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 16
border_width_top = 16
border_width_right = 16
border_width_bottom = 16
border_color = Color(1, 1, 1, 1)

[node name="DialoguePlayer" type="CanvasLayer"]
script = ExtResource("1_j41bn")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -540.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_j2se6")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="Label" type="Label" parent="MarginContainer/MarginContainer"]
custom_minimum_size = Vector2(1664, 240)
layout_mode = 2
theme_override_constants/line_spacing = 16
theme_override_fonts/font = ExtResource("3_ljukb")
theme_override_font_sizes/font_size = 48
autowrap_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2

[node name="Choice1" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_ljukb")
theme_override_font_sizes/font_size = 48
alignment = 0

[node name="Choice2" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_ljukb")
theme_override_font_sizes/font_size = 48
alignment = 0

[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/Choice1" to="." method="_on_choice_1_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/Choice2" to="." method="_on_choice_2_pressed"]
